# terrarium

./: .gitignore
IDF_Project/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
IDF_Project/download/: nvs_lib.c
IDF_Project/include/: Dusk2Dawn.h  animation.h  nvs_lib.h
IDF_Project/main/: CMakeLists.txt  Dusk2Dawn.c  animation.c  bsp_qmi8658.c  bsp_qmi8658.h  dht.c  gauge.c  gauge.h  idf_component.yml  main.c  nvs_lib.c
IDF_Project/main/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h
IDF_Project/main/ui/components/: ui_comp.c  ui_comp.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_onoffcomp.c  ui_comp_onoffcomp.h
IDF_Project/main/ui/fonts/: ui_font_FontAwesome40.c  ui_font_FontAwesome60.c  ui_font_FontAwesomepro6light30.c  ui_font_FontRoboto10.c  ui_font_FontRoboto12.c  ui_font_FontRoboto18.c  ui_font_FontSpeed.c  ui_font_roboto14.c  ui_font_titulky.c
IDF_Project/main/ui/images/: ui_img_1601502596.c  ui_img_1798728470.c  ui_img_1882603517.c  ui_img_1966217086.c  ui_img_942215904.c  ui_img_scull_png.c
IDF_Project/main/ui/screens/: ui_MainScreen.c  ui_MainScreen.h  ui_ScreenAccel.c  ui_ScreenAccel.h  ui_ScreenMenu.c  ui_ScreenMenu.h
_squareline/: SquareLine_Project.sll  SquareLine_Project.spj  SquareLine_Project_events.py  display.afdesign  display.psd
_squareline/assets/: ui_font_FontAwesomepro6light20.c  ui_font_FontAwesomepro6light20.fcfg  ui_font_FontAwesomepro6light30.c  ui_font_FontAwesomepro6light30.fcfg  ui_font_FontAwesomepro6lightSmall.c  ui_font_FontAwesomepro6lightSmall.fcfg  ui_font_FontAwesomepro6solid20.c  ui_font_FontAwesomepro6solid20.fcfg  ui_font_FontRoboto12.c  ui_font_FontRoboto12.fcfg  ui_font_FontRoboto20.c  ui_font_FontRoboto20.fcfg  ui_font_FontSpeed.c  ui_font_FontSpeed.fcfg  ui_font_roboto14.fcfg  ui_font_titulky.fcfg
_squareline/components/: OnOffComp.ecomp
